[project]
name = "agentronix-email-triage"
version = "0.1.0"
description = "Email triage RL environment"
authors = [{name="Himasri"}]

dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn"
]

[project.scripts]
server = "inference:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
